[package]
name = "plygui-scintilla-test"
version = "0.1.0"
authors = ["snuk182 <snuk188@gmail.com>"]
edition = "2018"

[[bin]]
name = "uitest"
path = "src/main.rs"

[dependencies]
plygui = {version = "0.0.1", path = "../plygui", features = ["win32"]}
plygui-scintilla = {version = "0.0.1", path = "../plygui-scintilla", features = ["win32"]}